# cheerup

./: .gitignore  Makefile  README.md  cheerup.zsh  pyproject.toml  random.md
src/cheer/: __init__.py
src/cheerup/: __init__.py
